fix device type

--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -1,9 +1,9 @@
 {% set title_en = title_en | default("WB-MAO4-20mA (4-channel 0-20 mA output module)") -%}
 {% set title_ru = title_ru | default("WB-MAO4-20mA (4-канальный модуль токовых выходов 0-20 мА)") -%}
-{% set device_type = device_type | default("wb-mao4-20ma") -%}
+{% set device_type = device_type | default("wb_mao4_20ma") -%}
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WB-MAO4-20mA") -%}
-{% set device_id = device_id | default("wb-mao4-20ma") -%}
+{% set device_id = device_id | default("wb_mao4_20ma") -%}
 {% set has_signature = has_signature | default(true) -%}
 
 {% set INPUTS_NUMBER = 4 -%}
