--- a/templates/config-wb-led.json.jinja
+++ b/templates/config-wb-led.json.jinja
@@ -2101,7 +2101,7 @@
                 "address": 2014,
                 "type": "range",
                 "reg_type": "holding",
-                "sporadic": true,
+                "semi-sporadic": true,
                 "min": 0,
                 "max": 360,
                 "error_value": "0xFFFF",
