--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -20,7 +20,7 @@
             "signature": "WB-MAO4-20mA"
         }
     ],
-{% endif %}
+{% endif -%}
     "device": {
         "name": "{{ device_name }}",
         "id": "{{ device_id }}",
