--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -14,7 +14,7 @@
     "title": "template_title",
     "device_type": "{{ device_type }}",
     "group": "{{ group }}",
-{% if has_signature %}
+{% if has_signature -%}
     "hw": [
         {
             "signature": "WB-MAO4-20mA"
