--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -296,7 +296,7 @@
         "translations": {
             "en": {
                 "WB-MDALI_template_title": "WB-MDALI (3-channel RS485-DALI gate)",
-                "baud_rate_description": "Make sure that communication with the device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600"
+                "baud_rate_description": "Make sure that communication with the device is estabilished before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600"
             },
             "ru": {
                 "WB-MDALI_template_title": "WB-MDALI (3-канальный шлюз RS485-DALI)",
