--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -143,7 +143,7 @@
                 "group": "g_transparent_mode"
             },
             {
-                "name": "Channel {{ ch + 1 }} start bit not received error counter",
+                "name": "Channel {{ ch + 1 }} start bit is not received error counter",
                 "id": "channel{{ ch + 1 }}_nostart_error_counter",
                 "reg_type": "input",
                 "address": {{ 1855 + ch * 10 }},
@@ -173,7 +173,7 @@
                 "group": "g_error_counters"
             },
             {
-                "name": "Channel {{ ch + 1 }} stop bits not received error counter",
+                "name": "Channel {{ ch + 1 }} stop bits are not received error counter",
                 "id": "channel{{ ch + 1 }}_nostops_error_counter",
                 "reg_type": "input",
                 "address": {{ 1858 + ch * 10 }},
@@ -203,7 +203,7 @@
                 "group": "g_error_counters"
             },
             {
-                "name": "Channel {{ ch + 1 }} previous packet isn't sent error counter",
+                "name": "Channel {{ ch + 1 }} previous packet is not sent error counter",
                 "id": "channel{{ ch + 1 }}_txbusy_error_counter",
                 "reg_type": "input",
                 "address": {{ 1861 + ch * 10 }},
@@ -316,13 +316,13 @@
                 "Channel {{ ch + 1 }} bus is powered": "Шина канала {{ ch + 1 }} запитана",
                 "Channel {{ ch + 1 }} bus state changed after request": "Состояние шины канала {{ ch + 1 }} изменилось после запроса",
 
-                "Channel {{ ch + 1 }} start bit not received error counter": "Счетчик ошибок остуствия стартового бита канала {{ ch + 1 }}",
+                "Channel {{ ch + 1 }} start bit is not received error counter": "Счетчик ошибок остуствия стартового бита канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bit time error counter": "Счетчик ошибок времени бита канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} frame length error counter": "Счетчик ошибок длины фрейма канала {{ ch + 1 }}",
-                "Channel {{ ch + 1 }} stop bits not received error counter": "Счетчик ошибок отсутствия стоп-битов канала {{ ch + 1 }}",
+                "Channel {{ ch + 1 }} stop bits are not received error counter": "Счетчик ошибок отсутствия стоп-битов канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} frame receive timeout error counter": "Счетчик ошибок таймаута приема фрейма канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bus is not powered error counter": "Счетчик ошибок незапитанности шины канала {{ ch + 1 }}",
-                "Channel {{ ch + 1 }} previous packet isn't sent error counter": "Счетчик ошибок неотправленности прерыдудщего фрейма канала {{ ch + 1 }}",
+                "Channel {{ ch + 1 }} previous packet is not sent error counter": "Счетчик ошибок неотправленности прерыдудщего фрейма канала {{ ch + 1 }}",
                 {% endfor -%}
                 
                 "Serial": "Серийный номер",
