fix few strings

--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -310,8 +310,8 @@
                 "Transmit 16bit forward frame over channel {{ ch + 1 }}": "Передать 16-битный forward фрейм по каналу {{ ch + 1 }}",
                 "Transmit 24bit forward frame over channel {{ ch + 1 }}, left aligned": "Передать 24-битный forward фрейм по каналу {{ ch + 1 }}, выровнен по левому краю",
                 "Channel {{ ch + 1 }} reply timeout": "Таймаут ответа канала {{ ch + 1 }}",
-                "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned": "Получен 8-битный backward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
-                "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned": "Получен 24-битный forward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
+                "Received 8bit backward frame from channel {{ ch + 1 }}, left aligned": "Полученный 8-битный backward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
+                "Received 24bit forward frame from channel {{ ch + 1 }}, left aligned": "Полученный 24-битный forward фрейм от канала {{ ch + 1 }}, выровнен по левому краю",
                 "24bit forward frame is received from channel {{ ch + 1 }}": "Получен 24-битный фрейм от канала {{ ch + 1 }}",
                 "Channel {{ ch + 1 }} bus is powered": "Шина канала {{ ch + 1 }} запитана",
                 "Channel {{ ch + 1 }} bus state changed after request": "Состояние шины канала {{ ch + 1 }} изменилось после запроса",
