--- a/templates/config-wb-led.json.jinja
+++ b/templates/config-wb-led.json.jinja
@@ -1846,7 +1846,14 @@
                 "sw_cct1_act_title" : "Каналы CCT1",
                 "sw_cct2_act_title" : "Каналы CCT2",
                 "sw_rgb_act_title" : "Каналы RGB",
-                "Channel RGB" : "Каналы RGB"
+                "Channel RGB" : "Каналы RGB",
+                "Channel RGB_H" : "Канал H",
+                "Channel RGB_S" : "Канал S",
+                "Channel RGB_V" : "Канал V",
+                "Action Hue" : "Действие с оттенком(H)",
+                "Action Saturation" : "Действие с насыщенностью",
+                "Action Brightness" : "Действие с яркостью",
+                "Action Temperature" : "Действие с температурой"
             }
         }
     }
