fix increase/decrease for all actions

--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -249,8 +249,8 @@
                 "enum_titles": [
                     "Turn Off",
                     "Turn On",
-                    "Increase Level",
-                    "Decrease Level"
+                    "Decrease Level",
+                    "Increase Level"
                 ],
                 "default": 0,
                 "group": "input_{{ch_number + 1}}_{{press_type | replace(' ', '_') }}_press_action",
