disable frame counters by default

--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -209,7 +209,7 @@
                 "address": {{ 1885 + ch }},
                 "type": "value",
                 "format": "u16",
-                "enabled": true,
+                "enabled": false,
                 "group": "g_error_counters"
             },
             {
@@ -219,7 +219,7 @@
                 "address": {{ 1890 + ch }},
                 "type": "value",
                 "format": "u16",
-                "enabled": true,
+                "enabled": false,
                 "group": "g_error_counters"
             },
             {% endfor -%}
