make few regs sporadic

--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -88,6 +88,7 @@
                 "address": {{ 1815 + ch }},
                 "type": "switch",
                 "format": "u16",
+                "sporadic": true,
                 "enabled": false,
                 "group": "g_transparent_mode"
             },
@@ -139,6 +140,7 @@
                 "address": {{ 1880 + ch }},
                 "type": "switch",
                 "format": "u16",
+                "sporadic": true,
                 "enabled": false,
                 "group": "g_transparent_mode"
             },
